--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description:
 				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/KozarzeLP1.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
