--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description:
 		<h1 class="editable"><strong>Strona w budowie...</strong></h1>
 		<p class="subtext editable">Lorem ipsum... itd.</p>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/KozarzeLP1.jpg" alt="Screenshot" class="screenshot editable" />
 		</div>
 	</div>
 </section>
