--- a/pricing.html
+++ b/pricing.html
@@ -1,8 +1,8 @@
 ---
 title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
-pricing_table:
+heading: Lorem ipsum dolor sit amet
+description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+<!--pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
@@ -65,7 +65,7 @@ faq:
   - question: Do you offer pricing for nonprofit organizations?
     answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
   - question: Questions?
-    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
+    answer: Contact us for any further questions at <a href="#">john@business.com</a>. -->
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
