--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 ---
-title: Pricing
+title: Historia
 heading: Lorem ipsum dolor sit amet
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 <!--pricing_table:
