--- a/kontakt.html
+++ b/kontakt.html
@@ -7,20 +7,20 @@ map:
   latitude: 52.66802561453536
   longitude: 22.470898754328214
   address: "Kozarze"
-  zoom: 13
+  zoom: 10
 ---
-<div class="map" id="map"></div>
-
 
 <div class="contact-box">
 	<div class="contact-details">
-		<h3 class="editable">Address</h3>
+		<h3 class="editable">Dojazd:</h3>
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
-		<h3 class="editable">Email</h3>
+		<h3 class="editable">Email:</h3>
 		<p><a href="mailto:support@example.com">kozarze.pl@gmail.com</a></p>
 	</div>
 </div>
+
+<div class="map" id="map"></div>
 
 <script type="text/javascript">
 	window.mapData = {{ page.map | jsonify }};
