--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ title: Kozarze
 description: 
 ---
 <section class="hero">
-	<div class="text-container">
+<!--	<div class="text-container">
 		<h1 class="editable"><strong>Strona w budowie...</strong></h1>
 		<p class="subtext editable">Lorem ipsum... itd.</p>
 		<div>
 			<img src="{{ site.baseurl }}/images/KozarzeLP1.jpg" alt="Screenshot" class="screenshot editable" />
 		</div>
-	</div>
+	</div> -->
 </section>
 
 <div class="content">
