--- a/kontakt.html
+++ b/kontakt.html
@@ -12,12 +12,14 @@ map:
 
 <div class="contact-box">
 	<div class="contact-details">
-		<h3 class="editable">Dojazd do Kozarzy:</h3>
-		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
-	</div>
-	<div class="contact-details">
-		<h3 class="editable">Email:</h3>
-		<p><a href="mailto:support@example.com">kozarze.pl@gmail.com</a></p>
+		<div class="column">
+			<h3 class="editable">Dojazd do Kozarzy:</h3>
+			<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
+		</div>
+		<div class="column">
+			<h3 class="editable">Email:</h3>
+			<p><a href="mailto:support@example.com">kozarze.pl@gmail.com</a></p>
+		</div>
 	</div>
 </div>
 
