--- a/kontakt.html
+++ b/kontakt.html
@@ -12,11 +12,11 @@ map:
 
 <div class="contact-box">
 	<div class="contact-details">
-		<h3 class="editable">Dojazd do Kozarzy:</h3>
+		<h3 class="editable">Dojazd do Kozarzy</h3>
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 		
-		<h3 class="editable">Email:</h3>
-		<p><a href="mailto:support@example.com">kozarze.pl@gmail.com</a></p>
+		<h3 class="editable">Email</h3>
+		<p><a href="mailto:kozarze.pl@gmail.com">kozarze.pl@gmail.com</a></p>
 	</div>
 </div>
 
