--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@ map:
 <div class="contact-box">
 	<div class="contact-details">
 		<h3 class="editable">Dojazd do Kozarzy</h3>
-		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
+		<address><a target="_blank" href="https://goo.gl/maps/JS4fm4MsspRxq4ZZ7"></a></address>
 		
 		<h3 class="editable">Email</h3>
 		<p><a href="mailto:kozarze.pl@gmail.com">kozarze.pl@gmail.com</a></p>
