--- a/kontakt.html
+++ b/kontakt.html
@@ -12,10 +12,10 @@ map:
 
 <div class="contact-box">
 	<div class="contact-details">
-		<h3 class="editable">Dojazd do Kozarzy</h3>
-		<address><a target="_blank" href="https://goo.gl/maps/JS4fm4MsspRxq4ZZ7"></a></address>
+		<h3 class="editable">Dojazd:</h3>
+		<address><a target="_blank" href="https://goo.gl/maps/JS4fm4MsspRxq4ZZ7">Kozarze</a></address>
 		
-		<h3 class="editable">Email</h3>
+		<h3 class="editable">Email:</h3>
 		<p><a href="mailto:kozarze.pl@gmail.com">kozarze.pl@gmail.com</a></p>
 	</div>
 </div>
