--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Kozarze
-description: 
+description: Strona internetowa wsi Kozarze
 ---
 <section class="hero">
 <!--	<div class="text-container">
